--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-tsc": "^1.1.4",
+    "gulp-typescript": "^2.10.0",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "tslint": "^3.2.1",
+    "typescript": "^1.7.5"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
